--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
             echo 'export DB_NAME="test_db"' >> $BASH_ENV
             echo 'export DB_USER="admin"' >> $BASH_ENV
             echo 'export DB_PASSWORD="password"' >> $BASH_ENV
-            echo 'export DB_HOST="127.0.0.1"' >> $BASH_ENV
+            echo 'export DB_HOST="db"' >> $BASH_ENV
             echo 'export DB_PORT="3306"' >> $BASH_ENV
             echo 'export SECRET_KEY="SECRET_KEY"' >> $BASH_ENV
             source $BASH_ENV
