MODIFY:  - README.md : ISSUE 처리 문서, API 사용 문서 추가  - docker-compose.yml, settings.py : 개발환경, 배포환경 구분 코드 추가

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,13 @@ services:
         build: 
             context: .
             dockerfile: ./Dockerfile
+        environment: 
+            - DJANGO_DEBUG=True
+            - DJANGO_DB_HOST=db
+            - DJANGO_DB_PORT=3306
+            - DJANGO_DB_USERNAME=admin
+            - DJANGO_DB_PASSWORD=password
+            - DJANGO_DB_NAME=moving
         command: >
             bash -c "./wait-for-it.sh db:3306 -t 15
             && python manage.py makemigrations
